# noaa-weatherwire

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_parsed_metadata.py
backend/app/: config.py  database.py  ingest_main.py  main.py
backend/app/models/: __init__.py  weather_message.py
backend/app/routers/: features.py  health.py  messages.py
backend/app/schemas/: __init__.py  vtec_event.py  weather_message.py
backend/app/scripts/: backfill_parsed_metadata.py
backend/app/services/: map_features.py  messages.py  reference.py  stream.py  vtec_events.py
backend/app/services/ingest/: body_parser.py  cap_parser.py  client.py  forecast_offices.py  nws_forecast_offices.json  nws_product_types.json  parser.py  product_types.py  repository.py  ugc_zones.py  worker.py
backend/tests/: test_body_parser.py  test_cap_parser.py  test_forecast_offices.py  test_parser.py  test_ugc_zones.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/components/: AlertMap.tsx  AlertsFeed.tsx  EventsFeed.tsx  IngestStatusBadge.tsx  MapPageClient.tsx  MessageFeed.tsx  MessageFilters.tsx  Nav.tsx  OfficeCell.tsx  ProductTypeBadge.tsx  ReferenceBrowser.tsx  VtecActionBadge.tsx
frontend/src/hooks/: useFeedData.ts  useFeedPagination.ts  useMessageStream.ts
frontend/src/lib/: api.ts  offices.ts  types.ts
(+18 files in other folders)
