[project]
name = "weatherwire-backend"
version = "0.1.0"
description = "NOAA Weather Wire ingest and API service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.14.0",
    "python-dotenv>=1.0.0",
    "nwws-oi-receiver>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
weatherwire-ingest = "app.ingest_main:main"
weatherwire-api = "app.api_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.wheel.force-include]
"app/services/ingest/nws_product_types.json" = "app/services/ingest/nws_product_types.json"
"app/services/ingest/nws_forecast_offices.json" = "app/services/ingest/nws_forecast_offices.json"
"app/services/ingest/nws_ugc_zones.json" = "app/services/ingest/nws_ugc_zones.json"
